--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             <div class="firstContainer">
                 <div>
                     <img src="./assets/images/bluestrips.png" alt="BlueStrips" style="width:100% " >
-                    <div class="text-block"> 
-                        <h1>Cool subtitle here!</h1>
+                    <div class="text-blockFirst"> 
+                        <h1>No pain No gain</h1>
                     </div>
                 </div>
                                             
@@ -40,15 +40,11 @@
                 <div class="subtitle">About  me</div> 
                 <!-- <aside class="left-side"> About me  </aside>   -->
                 <div>
-                    <p  class="par">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Sunt autem, architecto laboriosam voluptates eos id nam corru
-                            pti dolorum aspernatur necessitatibus natus provident rerum quibusdam ess
-                            e. Laboriosam quae laudantium rerum possimus.  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Sunt autem, architecto laboriosam voluptates eos id nam corru
-                            pti dolorum aspernatur necessitatibus natus provident rerum quibusdam ess
-                            e. Laboriosam quae laudantium rerum possimus. 
-                    </p>
+                    <div class="project">
+                        <p  class="par">
+                                Hello! My name is Marjorie and I look forward to push myself to learn about coding. Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique sapiente aliquam repellendus earum quod, ipsam iste harum ex asperiores amet nobis aliquid voluptatum dolore cupiditate recusandae officiis. Rem, repellat facere.
+                        </p>
+                    </div>
                 </div>
             </div>
 
@@ -61,7 +57,7 @@
                             <div class="bigContainer" > 
                                 <a href="https://www.google.com">
                                     <img src="./assets/images/surf-report.png" alt="Surf-Report" >
-                                    <div class="text-block">  
+                                    <div class="text-BigBlock">  
                                          <h1>Surf Report</h1> 
                                         <p>bfdhbfjdfb</p>
                                     </div>
@@ -107,10 +103,11 @@
                             </div>
                      </div> 
             
-                </div>
+            </div>
                  <!-- contact me -->
-                <div class="subtitle-parent" id="contactme">
+            <div class="subtitle-parent" id="contactme">
                     <div class="subtitle"> Contact me </div>
+                        <div class="project">
                         <div class="contact-nav">
                             <li><a href=555.555.5555> 555.555.555</a></l1>
                             <li><a href="marjoriebaut.w@gmail.com">E-mail</a></li>
@@ -118,7 +115,8 @@
                             <li><a href="https://twitter.com/?lang=en">Twitter</a></li>
                             <li><a href="Spotify.com">Spotiffy</a></li>
                         </div>
-                </div>
+                    </div>
+             </div>
 
         </main>
 
