--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                      <div class="project">
                                 <!-- surf report -->
                             <div class="bigContainer" > 
-                                <a href="https://www.google.com">
+                                <a href="https://sammyyi34.github.io/nba-playoff-tracker/">
                                     <img src="./assets/images/surf-report.png" alt="Surf-Report" >
                                     <div class="text-BigBlock">  
                                          <h1>Surf Report</h1> 
